[package]
name = "step-function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
aws-config = "0.0.25-alpha"
aws-types = "0.0.25-alpha"
aws-sdk-sfn = "0.0.25-alpha"
log = "0.4.14"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
simple_logger = "1.13.0"
tokio = "1.13.0"
lambda_runtime = "0.4.1"
aws_lambda_events = "0.5.0"

# APP
[[bin]]
name = "handler"
path = "src/bin/lambda/handler.rs"
